force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Email__c</fullName>
    <label>Attendee Email</label>
    <type>Email</type>
</CustomField>