force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Attendee_Instructions__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Instructions__c</fullName>
    <description>Any Information for the attendee</description>
    <label>Attendee Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>