force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Availability_End__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_End__c</fullName>
    <label>Availability Ending</label>
    <type>DateTime</type>
</CustomField>