force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Availability_Start__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Availability_Start__c</fullName>
    <label>Availability Starting</label>
    <type>DateTime</type>
</CustomField>