force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Criteria__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Criteria__c</fullName>
    <description>This defines whether a template Activity in TimeTrade will be utilized for the meeting, or a user-defined &quot;ad-hoc&quot; criteria is defined by the user</description>
    <inlineHelpText>Choose whether an existing template activity in TimeTrade will be utilized for the meeting, or a user-defined &quot;ad-hoc&quot; meeting is created by the user.</inlineHelpText>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad-Hoc Meeting</fullName>
                <default>true</default>
                <label>Ad-Hoc Meeting</label>
            </value>
            <value>
                <fullName>TimeTrade Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>