force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Custom_Availability_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Expire_Date__c</fullName>
    <label>Custom Availability Expire Date</label>
    <type>Date</type>
</CustomField>