force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Custom_Availability_Info__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Custom_Availability_Info__c</fullName>
    <description>SF-125 custom availability information is serialized to this string as JSON.</description>
    <inlineHelpText>Not user editable.</inlineHelpText>
    <label>Custom Availability Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>