force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Duration__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes</fullName>
                <default>true</default>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>60 Minutes</fullName>
            </value>
            <value>
                <fullName>90 Minutes</fullName>
            </value>
            <value>
                <fullName>30 Minutes (Rolling 2 Weeks)</fullName>
                <isActive>false</isActive>
                <label>30 Minutes (Rolling 2 Weeks)</label>
            </value>
            <value>
                <fullName>30min Afternoons</fullName>
                <isActive>false</isActive>
                <label>30min Afternoons</label>
            </value>
            <value>
                <fullName>30min All Day Next 2 Weeks</fullName>
                <isActive>false</isActive>
                <label>30min All Day Next 2 Weeks</label>
            </value>
            <value>
                <fullName>60min Afternoons</fullName>
                <isActive>false</isActive>
                <label>60min Afternoons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>