force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Dynamic__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Dynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is checked when the invitation is defined as dynamic.  In dynamic invitations, all internal attendees are defined when ClickToSchedule is launched based on parameters and other Invitation attributes.</inlineHelpText>
    <label>Dynamic Invitation</label>
    <type>Checkbox</type>
</CustomField>