force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Invitation_Id_MAC__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation_Id_MAC__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field functions as a more secure ID.  I contains a large number of significant digits so there is no practical chance of accessing another invitation by incrementing digits.</description>
    <externalId>true</externalId>
    <inlineHelpText>This field functions as a more secure ID.  I contains a large number of significant digits so there is no practical chance of accessing another invitation by incrementing digits.</inlineHelpText>
    <label>Invitation Id MAC</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>