force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Invitation_TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation_TimeZoneSidKey__c</fullName>
    <label>Invitation TimeZoneSidKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>