force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Location__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Location__c</fullName>
    <inlineHelpText>Specifies the location text that will be populated in the meeting invite ICS.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>