force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Notes__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Notes__c</fullName>
    <inlineHelpText>Provide any additional information to be shared with the client for the invitation and scheduled meetings.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>