force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Physical_Attendee_Information__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Physical_Attendee_Information__c</fullName>
    <label>Physical Attendee Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>