force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Private__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Private invitations will limit scheduling to a one-time use link, only for invited clients.</inlineHelpText>
    <label>Private Invitation</label>
    <type>Checkbox</type>
</CustomField>