force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Recovery_Time__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Recovery_Time__c</fullName>
    <defaultValue>&#39;0&#39;</defaultValue>
    <inlineHelpText>Specify additional time to be added after meeting to prevent booking of next meeting exactly adjacent to meeting.  Normal values are &quot;0&quot;, &quot;15&quot;, &quot;30&quot;, or &quot;60&quot;.</inlineHelpText>
    <label>Recovery Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>