force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Rolling_Window__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Rolling_Window__c</fullName>
    <label>Rolling Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>