force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Rolling_Window_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Rolling_Window_Expire_Date__c</fullName>
    <description>Date till which the Rolling window must be open</description>
    <label>Rolling Window Expire Date</label>
    <type>Date</type>
</CustomField>