force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Scheduling_Link__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Scheduling_Link__c</fullName>
    <label>Scheduling Link</label>
    <type>Url</type>
</CustomField>