force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invitees Email</label>
    <type>Checkbox</type>
</CustomField>