force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Suppress_User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Suppress_User_Email_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this option is checked, internal email addresses will not be displayed on the book meeting page and email.</description>
    <inlineHelpText>When this option is checked, internal email addresses will not be displayed on the book meeting page and email.</inlineHelpText>
    <label>Email Addresses Hidden</label>
    <type>Checkbox</type>
</CustomField>