force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Template__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The template to use for outbound email notifications about the Invitation and scheduled meetings.</inlineHelpText>
    <label>Email Notification Template</label>
    <referenceTo>TimeTrade_SF1__Invitation_Template__c</referenceTo>
    <relationshipLabel>TimeTrade Invitations</relationshipLabel>
    <relationshipName>Meeting_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>