force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Web_Conference__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference__c</fullName>
    <description>Web Conference Options</description>
    <label>Web Conference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WebEx</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>GoToMeeting</fullName>
            </value>
            <value>
                <fullName>JoinMe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>