force-app/main/default/objects/TimeTrade_SF1__Invitation__c/fields/TimeTrade_SF1__Who_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Who_ID__c</fullName>
    <description>The Id of the Related object</description>
    <label>Who ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>