force-app/main/default/objects/TimeTrade_SF1__Invitation__c/recordTypes/TimeTrade_SF1__Ad_Hoc_Meeting_Invitation.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Ad_Hoc_Meeting_Invitation</fullName>
    <active>true</active>
    <description>With Ad-Hoc meetings, users can define specific criteria for the meeting invitation</description>
    <label>Ad-Hoc Meeting Invitation</label>
</RecordType>