force-app/main/default/objects/TimeTrade_SF1__Invitation__c/recordTypes/TimeTrade_SF1__Dynamic_Meeting.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Dynamic_Meeting</fullName>
    <active>true</active>
    <description>For a Dynamic Meeting Invitation, all internal attendees are determined when ClickToSchedule is launched based on parameters and other Invitation attributes.</description>
    <label>Dynamic Meeting</label>
</RecordType>