force-app/main/default/objects/TimeTrade_SF1__Invitation__c/recordTypes/TimeTrade_SF1__Public_Meeting.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Public_Meeting</fullName>
    <active>true</active>
    <label>Public Meeting</label>
</RecordType>