force-app/main/default/objects/TimeTrade_SF1__Invitation__c/validationRules/TimeTrade_SF1__Time_Must_be_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>TimeTrade_SF1__Time_Must_be_Valid</fullName>
    <active>true</active>
    <description>Start Time must be less than finish time</description>
    <errorConditionFormula>AND(TimeTrade_SF1__Availability_Start__c &gt;=  TimeTrade_SF1__Availability_End__c,NOT( ISNULL(TimeTrade_SF1__Availability_Start__c )),NOT( ISNULL(TimeTrade_SF1__Availability_End__c)) )</errorConditionFormula>
    <errorDisplayField>TimeTrade_SF1__Availability_Start__c</errorDisplayField>
    <errorMessage>Event start time must be before finish time</errorMessage>
</ValidationRule>