force-app/main/default/objects/TimeTrade_SF1__Invitation__c/listViews/TimeTrade_SF1__All.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__All</fullName>
    <columns>NAME</columns>
    <columns>TimeTrade_SF1__Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>