force-app/main/default/objects/TimeTrade_SF1__Invitation__c/listViews/TimeTrade_SF1__My_Invitations.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__My_Invitations</fullName>
    <columns>NAME</columns>
    <columns>TimeTrade_SF1__Location__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Invitations</label>
</ListView>