force-app/main/default/objects/TimeTrade_SF1__Invitation__c/listViews/TimeTrade_SF1__My_Public_Invitations.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__My_Public_Invitations</fullName>
    <columns>NAME</columns>
    <columns>TimeTrade_SF1__Location__c</columns>
    <columns>TimeTrade_SF1__Scheduling_Link__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TimeTrade_SF1__Private__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Public Invitations</label>
</ListView>